added css styling and javascript functions

--- a/library.html
+++ b/library.html
@@ -5,10 +5,54 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./stylesheet.css">
-    <script src="./javascript.js"></script>
     <title>Library</title>
 </head>
 <body>
+    <header>
+        <h2>Virtual Library</h2>
+        
+        <!-- Adds books here -->
+      </header>
+      <button id="new-book">+</button>
+  
+      <div class="overlay"></div>
+      <div class="bookshelf"></div>
+  
+      <div class="popup">
+        <div class="book-container">
+          <h1>New Book</h1>
+          <div class="close">+</div>
+          <form id="form" action="/" method="GET">
+            <label for="title">Title:</label>
+            <input
+              type="text"
+              id="title"
+              name="title"
+              placeholder="Book Title"/>
+
+            <br/>
+
+            <label for="author">Author:</label>
+            <input
+              type="text"
+              id="author"
+              name="author"
+              placeholder="Author"/>
+
+            <br/>
     
+            <label for="read">Read the book?</label><br />
+            <select name="read" id="read">
+              <option value="Yes">Yes</option>
+              <option value="No">No</option>
+            </select>
+
+            <br/>
+
+            <input type="submit" value="Submit" />
+          </form>
+        </div>
+    </div>
+    <script src="./javascript.js"></script>
 </body>
 </html>
