--- a/library.html
+++ b/library.html
@@ -18,10 +18,10 @@
       <div class="overlay"></div>
       <div class="bookshelf"></div>
   
-      <div class="popup">
+      <div class="popup hidden">
         <div class="book-container">
           <h1>New Book</h1>
-          <div class="close">+</div>
+          <button class="close">+</button>
           <form id="form" action="/" method="GET">
             <label for="title">Title:</label>
             <input
