changed listeners remove hidden class, add if/else

--- a/library.html
+++ b/library.html
@@ -18,7 +18,7 @@
       <div class="overlay"></div>
       <div class="bookshelf"></div>
   
-      <div class="popup hidden">
+      <div class="popup">
         <div class="book-container">
           <h1>New Book</h1>
           <button class="close">+</button>
@@ -53,6 +53,6 @@
           </form>
         </div>
     </div>
-    <script src="./javascript.js"></script>
 </body>
+<script src="./javascript.js"></script>
 </html>
